[modelsim-ie] additional build image with modelsim-intel-edition from Archlinux AUR added

--- a/modelsim-intel-starter/Makefile
+++ b/modelsim-intel-starter/Makefile
@@ -1,19 +1,19 @@
-# Docker for FOSS RTL tools
+# Docker for Modelsim Intel Edition
 
 all: build
 
 # launch the docker container creation
 build: 
-	@echo "Building rtlfoss:base image"
-	@docker build -f rtlfoss.dk -t rtlfoss:base .
+	@echo "Building rtlfoss:modelsim_ie image"
+	@docker build -f modelsim-intel-starter.dk -t rtlfoss:modelsim_ie .
 
 run:
-	@echo "Starting Base RTL FOSS Docker"
+	@echo "Starting Modelsim Intel Starter Docker"
 	@xhost +
 	docker run -it --rm --workdir /home/$(USER) \
 --volume="/home/$(USER):/home/$(USER)" \
 -e DISPLAY=$(DISPLAY) -v /tmp/.X11-unix/:/tmp/.X11-unix \
-rtlfoss:base
+rtlfoss:modelsim_ie
 
 clean:
 	@echo "Cleaning up"
