[sshpass] add application for launching jobs via SSH and clean-up makefiles a bit

--- a/modelsim-intel-starter/Makefile
+++ b/modelsim-intel-starter/Makefile
@@ -1,18 +1,32 @@
 # Docker for Modelsim Intel Edition
-
+# Note for running on MAC with XQuarz you need to use the run_mac recipe
 all: build
 
 # launch the docker container creation
 build: 
 	@echo "Building rtlfoss:modelsim_ie image"
-	@docker build -f modelsim-intel-starter.dk -t rtlfoss:modelsim_ie .
+	@docker build --platform linux/amd64 -f modelsim-intel-starter.dk -t rtlfoss:modelsim_ie .
 
 run:
-	@echo "Starting Modelsim Intel Starter Docker"
+	@echo "Starting Modelsim ie RTL FOSS Docker"
 	@xhost +
-	docker run -it --rm --workdir /home/$(USER) \
+	docker run -it --rm  \
+--platform linux/amd64 \
+--workdir /home/$(USER) \
+--env=DISPLAY=$(DISPLAY) \
+--volume /tmp/.X11-unix/:/tmp/.X11-unix:rw \
 --volume="/home/$(USER):/home/$(USER)" \
--e DISPLAY=$(DISPLAY) -v /tmp/.X11-unix/:/tmp/.X11-unix \
+rtlfoss:modelsim_ie
+
+run_mac:
+	@echo "Starting Modelsim ie RTL FOSS Docker"
+	@xhost +
+	docker run -it --rm \
+--platform linux/amd64 \
+--workdir /home/$(USER) \
+--env=DISPLAY=host.docker.internal:0 \
+--volume /tmp/.X11-unix:/tmp/.X11-unix:rw \
+--volume="/Users/$(USER):/home/$(USER)" \
 rtlfoss:modelsim_ie
 
 clean:
